// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders EDIT dashboard 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="edit"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <EditDashboard />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders NEW dashboard 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="new"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <NewDashboard />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders PRINT dashboard 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="print"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <PrintDashboard />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders PRINT_LAYOUT dashboard 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="print-layout"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <PrintLayoutDashboard />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders correctly when dashboard id is not valid 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id="0"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="view"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <DashboardsBar />
    <NoContentMessage
      text="Requested dashboard not found"
    />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders correctly when dashboards loaded and id is null 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={true}
    id={null}
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="view"
    selectDashboard={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <Layer
      translucent={true}
    />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders correctly when dashboards not loaded and id is not null 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={false}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="view"
    selectDashboard={[MockFunction]}
  >
    <Layer
      translucent={true}
    />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders correctly when dashboards not loaded and id is null 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={false}
    dashboardsLoaded={false}
    id={null}
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="view"
    selectDashboard={[MockFunction]}
  >
    <Layer
      translucent={true}
    />
  </Dashboard>
</WindowDimensionsProvider>
`;

exports[`Dashboard renders correctly when no dashboards found 1`] = `
<WindowDimensionsProvider>
  <Dashboard
    dashboardsIsEmpty={true}
    dashboardsLoaded={true}
    id="rainbowdash"
    match={
      Object {
        "params": Object {
          "dashboardId": null,
        },
      }
    }
    mode="view"
    selectDashboard={[MockFunction]}
  >
    <DashboardsBar />
    <NoContentMessage
      text="No dashboards found. Use the + button to create a new dashboard."
    />
  </Dashboard>
</WindowDimensionsProvider>
`;
